--- a/ui/src/components/Form.css
+++ b/ui/src/components/Form.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
 .footer Button {
     margin-top: 20px;
     margin-left: 10px;
@@ -9,5 +13,6 @@
 }
 
 .header h1 {
+    font-family: 'Source Sans Pro', sans-serif;
     font-size: 10ch;
 }
